CSS/main.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background: #0a0908;
  color: white;
  font-size: 18px;
  font-family: "Cormorant Garamond", serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: #a97590;
  text-align: center;
  font-family: "Dancing Script", sans-serif;
  text-shadow: 0 0 10px #000000, 0 0 5px #000000;
}

section a,
footer a {
  color: white;
  text-decoration: none;
  font-weight: bold;
}

section a:hover,
footer a:hover {
  text-decoration: underline;
}

header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 50px;
  background: #000000;
  border-bottom: 2px solid #30113c;
  z-index: 1;
  box-shadow: 0 0 10px #000000;
}

.logoImg {
  margin: 5px;
}

header li {
  display: none;
}

.about {
  display: inline-block;
  margin-top: 25px;
  width: 100%;
  padding: 50px 20%;
}

.about img {
  float: right;
  width: 50%;
  margin: 6% 1%;
}

.aboutImg {
  border: 2px solid #30113c;
  border-radius: 100%;
}

.indexBlog {
  background: #020e13;
  border-top: 2px inset #020e13;
  border-bottom: 2px outset #020e13;
  margin: 50px auto;
  padding: 50px;
}

.indexBlog ul {
  list-style-type: none;
  margin: auto;
  display: flex;
}

.indexBlog li {
  height: fit-content;
  margin: 25px auto;
  background: #020e13;
  border-radius: 25px;
  box-shadow: 4px 4px 10px #000000;
  align-content: space-around;
}

.indexBlog img {
  width: 100%;
  border-radius: 25px 25px 0 0;
  box-shadow: 0 0 10px #000000;
}

.rowOne {
  display: flex;
  flex-flow: column wrap;
  width: 80%;
}

.seven,
.eight,
.nine,
.ten,
.eleven,
.twelve {
  background: #0a0908;
  border-radius: 25px;
}

.contact {
  display: inline-block;
  width: 100%;
  padding: 50px 20%;
  text-align: center;
}

.contact h3,
.contact h4,
.contact h5,
.contact h6 {
  text-align: left;
}

form {
  font-size: 1.5em;
  margin: auto;
}

input,
textarea {
  background: #020e13;
  color: white;
  border: 2px solid #30113c;
  border-radius: 10px;
}

input {
  height: 40px;
  width: 49%;
}

textarea {
  height: 80px;
  width: 100%;
}

button {
  background: #020e13;
  border: none;
  color: white;
  padding: 5px;
  border-radius: 15px;
  font-size: 24px;
  margin: 10px;
}

button:hover {
  font-weight: bold;
}

.icon {
  width: 100px;
}

.contact img {
  width: 15%;
}

footer {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 50px;
  text-align: center;
  background: #000000;
  border-top: 2px solid #30113c;
  z-index: 1;
}

.bottomNav {
  display: inline-block;
}

footer a {
  margin-left: 5px;
}

footer ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

footer li {
  float: right;
}

footer li a {
  display: inline-block;
  color: white;
  text-align: center;
  padding: 16px;
  text-decoration: none;
}

footer li a:hover {
  background-color: #0a0908;
  border-bottom: 2px solid #30113c;
  box-shadow: 0 0 10px #000000;
}

/* blogList */

.blogList {
  margin: 50px auto;
}

.blogs {
  width: 80%;
  margin: auto;
  display: flex;
  justify-content: flex-start;
}

.firstColumn,
.secondColumn,
.thirdColumn {
  display: flex;
  flex-direction: column;
  width: 30%;
}

.blogs ul {
  list-style-type: none;
  margin: auto;
  display: flex;
  flex-direction: column;
}

.blogs li {
  height: fit-content;
  margin: 10px;
  background: #020e13;
  border-radius: 25px;
  box-shadow: 4px 4px 10px #000000;
}

.blogs img {
  width: 100%;
  border-radius: 25px 25px 0 0;
  box-shadow: 0 0 10px #000000;
}

.blogs h1,
.blogs h2,
.blogs h3,
.blogs h4,
.blogs h5,
.blogs h6 {
  text-align: left;
  text-indent: 5px;
}

sub {
  padding-left: 5px;
}

.blogs p {
  text-indent: 5px;
  padding: 5px 5px 10px 5px;
}

@media only screen and (min-width: 551px) {
  body {
    font-size: 22px;
  }

  header ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
  }

  header li {
    display: inline;
  }

  header li a {
    float: right;
    color: white;
    text-align: center;
    padding: 16px;
    text-decoration: none;
  }

  header li a:hover {
    background-color: #0a0908;
    border-bottom: 2px solid #30113c;
    box-shadow: 0 0 10px #000000;
  }

  .aboutImg {
    display: block;
    width: 100%;
  }

  .rowOne {
    display: flex;
    flex-flow: row wrap;
    width: 80%;
  }

  .indexBlog li {
    width: 30%;
    margin: auto;
  }

  .overlay {
    display: none;
  }

  input {
    width: 100%;
    padding-bottom: 10px;
  }

  .bottomNav {
    display: none;
  }
}

::-webkit-scrollbar {
  display: none;
}

